@@ -1,3 +1,7 @@
+2004-12-02  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gcc-version.m4: New file.
+
 2004-09-24  Zack Weinberg  <zack@codesourcery.com>
 
 	* warnings.m4: New file.
